# NAKSHTRA-MUMBAIHACKS25

./: package-lock.json
RAG/: pyproject.toml  requirement.txt
RAG/data/text_files/: finadapt_intro.txt
RAG/data/vector_store/: chroma.sqlite3
RAG/notebook/: docuement.ipynb
ai_service/: .env  app.py  ingest.py  rag_engine.py  requirements.txt  test_api.py
ai_service/agents/: app.py  app1.py  chatbot.py  cleaner.py  insights.py  knowledge_service.py
ai_service/routes/: financial_health.py
ai_service/services/: README.md  financial_health.py
backend/: .env  package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: authController.js  budgetController.js  chatController.js  fingoalController.js  insightController.js  notificationController.js  transactionController.js
backend/middlewares/: authMiddleware.js  upload.js  validate.js
backend/models/: Message.js  User.js  budgets.js  finGoal.js  insight.js  notifications.js  transactions.js
backend/routes/: authRoute.js  budgetRoute.js  chatRoute.js  fingoalRoute.js  insightRoute.js  notificationRoute.js  transactionRoute.js
backend/services/: chunkService.js  embedService.js  pdfservice.js  pipelineService.js  textService.js  transactionService.js  vectorService.js
backend/validators/: authValidation.js  budgetValidation.js  fingoalValidation.js  insightValidation.js  notificationValidation.js  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontendnew/: package-lock.json  package.json  tsconfig.json
(+53 files in other folders)
